deluge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 0
        maxUnavailable: 1
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
     volumes:
      - name: deluge-config
        persistentVolumeClaim:
          claimName: deluge-config-pvc
      - name: deluge-downloads
        persistentVolumeClaim:
          claimName: deluge-downloads-pvc
     containers:
        - name: deluge
          #image: ghcr.io/linuxserver/transmission:4.0.4
          image: ghcr.io/linuxserver/deluge:2.1.1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              memory: 256Mi
          ports:
            - name: http
              protocol: TCP
              containerPort: 8112
          volumeMounts:
            - name: deluge-config
              mountPath: /config
            - name: deluge-downloads
              mountPath: /downloads
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            tcpSocket:
              port: 8112
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 2
            tcpSocket:
              port: 8112
            timeoutSeconds: 2
