deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deluge
  name: deluge
spec:
  ipFamilyPolicy: PreferDualStack
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8112
      targetPort: http
  selector:
    app: deluge
