deluge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: zerossl-prod
    external-dns.alpha.kubernetes.io/target: ip.nidr0x.win
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-oauth-auth-redirect@kubernetescrd
spec:
  rules:
    - host: deluge.nidr0x.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deluge
                port:
                  name: http
  tls:
    - hosts:
      - '*.nidr0x.win'
      secretName: zerossl-prod
